--- a/demo/demo.styl
+++ b/demo/demo.styl
@@ -1,6 +1,16 @@
 
-@import '../app/_notify.styl'
+@import '../lib/_notify.styl'
 
+
+html { height: 100% }
 body {
+  height: 100%
+  margin: 0
   font-size: 14px
+}
+#root {
+  position: relative;
+  text-align: center;
+  top: 38.2%;
+  transform: translateY(-38.2%);
 }
