add usage in demo

--- a/demo/demo.styl
+++ b/demo/demo.styl
@@ -14,3 +14,15 @@ body {
   top: 38.2%;
   transform: translateY(-38.2%);
 }
+
+.code-block {
+  margin-top: 20px
+  text-align: left
+  width: 400px
+  margin: 0 auto
+  pre {
+    background-color: #f5f5f5
+    padding: 14px
+    overflow-x: auto
+  }
+}
