Namespaced the notification class

--- a/lib/notify.styl
+++ b/lib/notify.styl
@@ -17,7 +17,7 @@
     right: 1em
 
 
-  .notification
+  .notify-notification
     color: #fff
     min-width: 160px
     max-width: 310px
@@ -36,7 +36,7 @@
       opacity: 1
       padding-top: 10px
       padding-bottom: 10px
-    
+
     &__body
       flex: 1
     &__icon
